@@ -4,26 +4,36 @@ import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
 import io.github.bucket4j.Bandwidth;
 import io.github.bucket4j.Bucket;
-import io.jans.as.client.RegisterRequest;
+import io.jans.as.client.util.ClientUtil;
 import io.jans.as.model.common.FeatureFlagType;
 import io.jans.as.model.configuration.AppConfiguration;
+import io.jans.as.model.configuration.rate.KeyExtractor;
 import io.jans.as.model.configuration.rate.RateLimitConfig;
+import io.jans.as.model.configuration.rate.RateLimitRule;
 import io.jans.as.model.error.ErrorResponseFactory;
-import io.jans.as.server.register.ws.rs.RegisterService;
+import io.jans.as.model.exception.InvalidJwtException;
+import io.jans.as.model.jwt.Jwt;
+import io.jans.as.model.util.Pair;
+import io.jans.service.cdi.event.ConfigurationUpdate;
+import jakarta.annotation.PostConstruct;
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.event.Observes;
 import jakarta.inject.Inject;
 import jakarta.servlet.http.HttpServletRequest;
 import org.apache.commons.codec.digest.DigestUtils;
-import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.jetbrains.annotations.NotNull;
 import org.json.JSONObject;
 import org.slf4j.Logger;
 
 import java.io.IOException;
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
+
+import static org.apache.commons.collections.CollectionUtils.isEmpty;
 
 /**
  * @author Yuriy Z
@@ -33,11 +43,7 @@ public class RateLimitService {
 
     private static final int DEFAULT_REQUEST_LIMIT = 10;
     private static final int DEFAULT_PERIOD_LIMIT = 60;
-
-    private final Cache<String, Bucket> buckets = CacheBuilder.newBuilder()
-            .expireAfterWrite(2, TimeUnit.MINUTES)
-            .weakKeys()
-            .build();
+    public static final int KEY_LENGTH_LIMIT_FOR_DIGEST = 300;
 
     @Inject
     private Logger log;
@@ -46,65 +52,164 @@ public class RateLimitService {
     private AppConfiguration appConfiguration;
 
     @Inject
-    private RegisterService registerService;
-
-    @Inject
     private ErrorResponseFactory errorResponseFactory;
+
+    private final Cache<String, Bucket> buckets = CacheBuilder.newBuilder()
+            .expireAfterWrite(2, TimeUnit.MINUTES)
+            //.weakKeys()
+            .build();
+    private RateLimitConfig rateLimitConfiguration;
 
     public HttpServletRequest validateRateLimit(HttpServletRequest httpRequest) throws RateLimitedException, IOException {
         // if rate_limit flag is disabled immediately return
-        if (!errorResponseFactory.isFeatureFlagEnabled(FeatureFlagType.RATE_LIMIT)){
+        if (!errorResponseFactory.isFeatureFlagEnabled(FeatureFlagType.RATE_LIMIT)) {
             return httpRequest;
         }
-
-        RateLimitConfig rateLimitConfiguration = appConfiguration.getRateLimitConfiguration();
 
         // no rate limit configuration -> return
-        if (rateLimitConfiguration == null) {
+        if (rateLimitConfiguration == null || isEmpty(rateLimitConfiguration.getRateLimitRules())) {
             return httpRequest;
         }
 
-        final String requestUrl = httpRequest.getRequestURL().toString();
+        String requestPath = httpRequest.getRequestURI();
+        String method = httpRequest.getMethod();
 
-        boolean isRegisterEndpoint = requestUrl.endsWith("/register");
+        final List<RateLimitRule> matchedRules = matchRulesByPathAndMethod(requestPath, method);
 
-        if (isRegisterEndpoint) {
-            CachedBodyHttpServletRequest cachedRequest = new CachedBodyHttpServletRequest(httpRequest);
-            final RegisterRequest registerRequest = parseRegisterRequest(cachedRequest.getCachedBodyAsString());
-            String key = "no_key";
-            if (registerRequest != null) {
-                final String ssa = registerRequest.getSoftwareStatement();
-                final List<String> redirectUris = registerRequest.getRedirectUris();
+        // no matching rules
+        if (matchedRules.isEmpty()) {
+            return httpRequest;
+        }
 
-                if (StringUtils.isNotBlank(ssa)) {
-                    // hash ssa to save memory
-                    key = DigestUtils.sha256Hex(ssa);
-                } else if (CollectionUtils.isNotEmpty(redirectUris) && StringUtils.isNotBlank(redirectUris.get(0))) {
-                    key = redirectUris.get(0);
+        RateLimitContext rateLimitContext = new RateLimitContext(httpRequest, rateLimitConfiguration.isRateLoggingEnabled());
+        final List<Pair<String, RateLimitRule>> keyWithRules = buildKeyPerRule(rateLimitContext, matchedRules);
+
+        for (Pair<String, RateLimitRule> keyWithRule : keyWithRules) {
+            String key = keyWithRule.getFirst();
+            RateLimitRule rule = keyWithRule.getSecond();
+
+            int requestLimit = getRequestLimit(rule.getRequestCount());
+            int periodLimit = getPeriodLimit(rule.getPeriodInSeconds());
+
+            // if key is too long -> hash it to reduce amount of space it takes in memory
+            key = saveSpaceIfNeeded(key);
+            try {
+                Bucket bucket = buckets.get(key, () -> newBucket(requestLimit, periodLimit));
+                if (!bucket.tryConsume(1)) {
+                    String msg = String.format("Rate limited '%s'. Exceeds limit %s requests per %s seconds. Key: %s", requestPath, requestLimit, periodLimit, key);
+                    log.debug(msg);
+                    throw new RateLimitedException(RateLimitType.REGISTRATION, msg);
                 }
+            } catch (ExecutionException e) {
+                log.error(e.getMessage(), e);
             }
+        }
 
-            validateRateLimitForRegister(key);
-            return cachedRequest;
+        if (rateLimitContext.isCachedRequestAvailable()) {
+            return rateLimitContext.getCachedRequest();
         }
 
         return httpRequest;
     }
 
-    public void validateRateLimitForRegister(String key) throws RateLimitedException {
-        int requestLimit = getRequestLimit(appConfiguration.getRateLimitRegistrationRequestCount());
-        int periodLimit = getPeriodLimit(appConfiguration.getRateLimitRegistrationPeriodInSeconds());
-
-        try {
-            Bucket bucket = buckets.get(key, () -> newBucket(requestLimit, periodLimit));
-            if (!bucket.tryConsume(1)) {
-                String msg = String.format("Rate limited '/register', key %s. Exceeds limit %s requests per %s seconds.", key, requestLimit, periodLimit);
-                log.debug(msg);
-                throw new RateLimitedException(RateLimitType.REGISTRATION, msg);
-            }
-        } catch (ExecutionException e) {
-            log.error(e.getMessage(), e);
+    public static @NotNull String saveSpaceIfNeeded(String key) {
+        if (key.length() > KEY_LENGTH_LIMIT_FOR_DIGEST) {
+            key = DigestUtils.sha256Hex(key);
         }
+        return key;
+    }
+
+    private List<Pair<String, RateLimitRule>> buildKeyPerRule(RateLimitContext rateLimitContext, List<RateLimitRule> matchedRules) {
+        List<Pair<String, RateLimitRule>> keyWithRules = new ArrayList<>();
+        for (RateLimitRule rule : matchedRules) {
+            try {
+                keyWithRules.add(new Pair<>(buildKey(rateLimitContext, rule), rule));
+            } catch (IOException e) {
+                log.error(e.getMessage(), e);
+            }
+        }
+        return keyWithRules;
+    }
+
+    public String buildKey(RateLimitContext rateLimitContext, RateLimitRule rule) throws IOException {
+        String requestPath = rateLimitContext.getRequest().getRequestURI();
+        StringBuilder key = new StringBuilder(requestPath + "_");
+
+        for (KeyExtractor keyExtractor : rule.getKeyExtractors()) {
+            key.append(extractKey(keyExtractor, rateLimitContext)).append("_");
+        }
+
+        String keyString = key.toString();
+        if (rateLimitContext.isRateLoggingEnabled() && log.isTraceEnabled()) {
+            log.trace("Rate limit key: {}", keyString);
+        }
+        return keyString;
+    }
+
+    protected String extractKey(KeyExtractor keyExtractor, RateLimitContext rateLimitContext) throws IOException {
+        StringBuilder key = new StringBuilder();
+        switch (keyExtractor.getSource()) {
+            case HEADER:
+                for (String header : keyExtractor.getParameterNames()) {
+                    String value = rateLimitContext.getRequest().getHeader(header);
+                    if (StringUtils.isNotBlank(value)) {
+                        key.append(value).append("_");
+                    }
+                }
+                return key.toString();
+            case BODY:
+                String contentType = rateLimitContext.getRequest().getContentType();
+
+                // Note: Use .contains() rather than .equals() because the header often includes character encoding (e.g., application/json; charset=UTF-8).
+                if (contentType != null && contentType.contains("application/json")) {
+                    String bodyAsString = rateLimitContext.getCachedRequest().getCachedBodyAsString();
+                    JSONObject jsonObject = parseBody(bodyAsString);
+                    if (jsonObject != null) {
+                        for (String name : keyExtractor.getParameterNames()) {
+                            List<String> values = ClientUtil.extractListByKey(jsonObject, name);
+                            if (!values.isEmpty()) {
+                                key.append(values).append("_");
+                            }
+                        }
+                    }
+                } else {
+                    for (String name : keyExtractor.getParameterNames()) {
+                        String value = rateLimitContext.getRequest().getParameter(name);
+                        if (StringUtils.isNotBlank(value)) {
+                            key.append(value).append("_");
+                        }
+                    }
+                }
+
+                return key.toString();
+            case QUERY:
+                for (String name : keyExtractor.getParameterNames()) {
+                    String value = rateLimitContext.getRequest().getParameter(name);
+                    if (StringUtils.isNotBlank(value)) {
+                        key.append(value).append("_");
+                    }
+                }
+                return key.toString();
+        }
+
+        log.error("Invalid key extractor source: {}", keyExtractor.getSource());
+        return "null";
+    }
+
+    public List<RateLimitRule> matchRulesByPathAndMethod(String requestPath, String method) {
+        List<RateLimitRule> result = new ArrayList<>();
+
+        for (RateLimitRule rule : rateLimitConfiguration.getRateLimitRules()) {
+            if (!rule.isWellFormed()) {
+                log.error("Invalid rate limit rule: {}", rule);
+                continue;
+            }
+
+            if (rule.getPath().equals(requestPath) && rule.getMethods().contains(method)) {
+                result.add(rule);
+            }
+        }
+        return result;
     }
 
     private int getRequestLimit(Integer requestLimit) {
@@ -130,13 +235,32 @@ public class RateLimitService {
                 .build();
     }
 
-    public RegisterRequest parseRegisterRequest(String body) {
+    public JSONObject parseBody(String body) {
         try {
-            final JSONObject requestObject = registerService.parseRequestObjectWithoutValidation(body);
-            return RegisterRequest.fromJson(requestObject);
+            return new JSONObject(body);
         } catch (Exception e) {
-            log.error("Failed to parse registration request.", e);
-            return null;
+            try {
+                return Jwt.parseOrThrow(body).getClaims().toJsonObject();
+            } catch (InvalidJwtException ex) {
+                return null;
+            }
+        }
+    }
+
+    @PostConstruct
+    public void init() {
+        updateConfiguration(appConfiguration);
+    }
+
+    public void updateConfiguration(@Observes @ConfigurationUpdate AppConfiguration appConfiguration) {
+        try {
+            rateLimitConfiguration = appConfiguration.getRateLimitConfiguration();
+
+            if (rateLimitConfiguration == null) {
+                log.info("Rate limiting is not configured.");
+            }
+        } catch (Exception e) {
+            log.error(e.getMessage(), e);
         }
     }
 }
